# wasm-interface

./: Cargo.toml  README.md
crates/macro/: Cargo.toml
crates/macro-support/: Cargo.toml
crates/macro-support/src/: js_interface.rs  lib.rs
crates/macro/src/: any_types.rs  array_types.rs  boolean_types.rs  lib copy.rs  lib.rs  number_types.rs  string_types.rs  typed_array_types.rs
crates/macro/tests/: non-struct.rs  non-struct.stderr  unknown-field-type.rs  unknown-field-type.stderr
crates/package/: Cargo.toml
crates/package/src/: lib.rs
example/: Cargo.toml  package-lock.json  package.json
example/src/: lib.rs
src/: lib.rs
