[package]
name = "wasm-interface"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/MGibson1/wasm-interface"

[lib]

[dependencies]
static_assertions = "1.1.0"
wasm-bindgen = "0.2.80"
wasm-interface-macro = { path = "crates/macro" }
wasm-interface-macro-support = { path = "crates/macro-support" }

[workspace]

members = [
  "crates/macro",
  "crates/macro-support",
]

exclude = ["example"]
