[package]
name = "example"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/MGibson1/wasm-interface/tree/main/example"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.80"
wasm-interface = { path = "../", version = "0.1.0" }
