[package]
name = "wasm-interfacegen-macro-support"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/MGibson1/wasm-interfacegen/tree/main/crates/macro-support"
license = "GPL-3.0-or-later"
description = """
Definition of internal dependencies of the JsInterface derive macro
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
