[package]
name = "wasm-interfacegen-macro"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/MGibson1/wasm-interfacegen/tree/main/crates/macro"
license = "GPL-3.0-or-later"
description = """
Definition of the JsInterface procedural derive macro, an internal dependency of wasm-interfacegen
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0.18"
static_assertions = "1.1.0"
syn = { version = "1.0.92", features = ["extra-traits", "printing"] }

[dev-dependencies]
trybuild = "1.0.61"
wasm-bindgen = "0.2.80"
wasm-interfacegen = { path = "../package", version = "0.1.0" }
