[package]
name = "wasm-interfacegen"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/MGibson1/wasm-interfacegen"
license = "GPL-3.0-or-later"
description = """
A derive macro to automatically create typescript interface definitions for your types.
"""

[lib]

[dependencies]
static_assertions = "1.1.0"
wasm-bindgen = "0.2.80"
wasm-interfacegen-macro = { path = "../macro", version = "0.1.0" }
wasm-interfacegen-macro-support = { path = "../macro-support", version = "0.1.0" }
